--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
    },
    "dependencies": {
       "@koa/cors": "^5.0.0",
+      "axios": "^1.6.5",
+      "express": "^4.18.2",
       "koa": "^2.14.2",
       "koa-body": "^6.0.1",
       "koa-bodyparser": "^4.4.1",
