--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "@koa/cors": "^5.0.0",
       "axios": "^1.6.5",
+      "dayjs": "^1.11.10",
       "express": "^4.18.2",
       "koa": "^2.14.2",
       "koa-body": "^6.0.1",
