--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
       "koa-bodyparser": "^4.4.1",
       "koa-multer": "^1.0.2",
       "koa-router": "^12.0.1",
+      "koa-session": "^6.4.0",
       "koa-static": "^5.0.0",
       "mysql": "^2.14.1",
       "mysql2": "^3.6.5",
       "reflect-metadata": "^0.1.13",
+      "svg-captcha": "^1.4.0",
       "typeorm": "0.3.17"
    },
    "scripts": {
